...
                android:textColor="@color/colorPrimaryDark"
                android:textColorLink="@color/colorPrimaryDark"
                android:textSize="22sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:foregroundTint="@color/colorPrimaryDark"
                android:hint="@string/enter_the_type_of_workout"
                android:inputType="text"
...
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                android:textColorLink="#FFFFFF" />

            <EditText
                android:id="@+id/et_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:foregroundTint="@color/colorPrimaryDark"
                android:hint="@string/enter_your_set_repetitions"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLines="1"
                android:nextFocusDown="@+id/et_timePicker"
                android:singleLine="true"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark" />

...
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:background="@color/colorPrimaryDark"
...
