<resources>
    <string name="app_name">JoggingApp</string>
    <string name="tab_text_1">Workout</string>
    <string name="tab_text_2">Calendar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_training">TrainingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"
...
    <string name="space" />
    <string name="tv_Jogging_input">Enter Jogging-Workout name</string>
    <string name="other_workouts">Other Workouts</string>
    <string name="enter_the_type_of_workout">Enter the type of workout</string>
    <string name="enter_your_set_repetitions">Enter your set/ repetitions</string>
    <string name="date_of_workout">Date of Workout</string>
    <string name="submit_workout">Submit Workout</string>
    <string name="countdown">Countdown...</string>
</resources>

